z-index issue and some icons. rename notifications-btn-1 to notifications-btn

--- a/view/theme/redbasic/css/style.css
+++ b/view/theme/redbasic/css/style.css
@@ -50,7 +50,7 @@ main {
 	height: 100%;
 	background: rgba(0, 0, 0, .5);
 	cursor: pointer;
-	z-index: 1029;
+	z-index: 1028;
 }
 
 h1, .h1 {
